--- a/composicao.css
+++ b/composicao.css
@@ -6,3 +6,7 @@
 .bloco2{
     margin-left: 200px;
 }
+/*2. CENTRAR PÁGINA NA HORIZONTAL g1 (alínea2)  */
+div.base {
+    width: 960px; margin: auto;
+} 
