--- a/composicao.css
+++ b/composicao.css
@@ -1,12 +1,37 @@
-.bloco1{
-    width: 200px;
-    float: left;
+.font {
+    font: 20px Georgia, sans-serif;
+  }
+
+.h1 {
+    /*text-align: center;*/
+    /*color: rgb(255, 255, 255);*/
+    /*background-color: #851944;*/
+    padding: 24px;
+    margin: 0;
+}
+.h2 {
+    /*text-align: center;*/
+    /*color: rgb(255, 255, 255);*/
+    /*background-color: #851944;*/
+    padding: 24px;
+    margin: 0;
+}
+.p {
+    line-height: 1.5em; /*Espacamento entre linhas do parágrafo */
 }
 
-.bloco2{
-    margin-left: 200px;
+.base {
+    background-color: #eeeeee;
 }
-/*2. CENTRAR PÁGINA NA HORIZONTAL g1 (alínea2)  */
-div.base {
-    width: 960px; margin: auto;
-} 
+
+.bloco1 {
+    background-color: orange;
+
+}
+.bloco2 {
+    background-color: green;
+
+}
+.bloco3 {
+    background-color: red;
+}
